--- a/Components/Pages/MenuItems.razor.css
+++ b/Components/Pages/MenuItems.razor.css
@@ -135,3 +135,12 @@
         .add-menu-item button:hover {
             background-color: #31b0d5;
         }
+
+
+.menu-items .edit-button {
+    background-color: #5bc0de; 
+}
+
+    .menu-items .edit-button:hover {
+        background-color: #31b0d5;
+    }
